--- a/appd-machine/Dockerfile
+++ b/appd-machine/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:8-jre-slim
 
-RUN apt-get update && apt-get -y upgrade && apt-get install -y unzip && apt-get install -y apt-utils && apt-get install -y iproute2 && apt-get install -y procps && apt-get install -y sysstat && mkdir /opt/appdynamics
+RUN apt-get update && apt-get -y upgrade && apt-get install -y wget && apt-get install -y unzip && apt-get install -y apt-utils && apt-get install -y iproute2 && apt-get install -y procps && apt-get install -y sysstat && mkdir /opt/appdynamics
 
 ENV APPD_AGENT_VERSION = 4.3.5.13
 #ENV APPDYNAMICS_AGENT_ACCOUNT_ACCESS_KEY
